Fix #26 - overflow on chrome (#32)
Fixed overflow on Chrome.
also "fixed" a iOS Safari bug

--- a/packages/styles/_sass/design-system-website/_global-structure.scss
+++ b/packages/styles/_sass/design-system-website/_global-structure.scss
@@ -1,3 +1,7 @@
+/* fix bug on Chrome */
+body {
+  @extend .no-scroll;
+}
 /* === page === */
 .aside {
   background: $pm-global-grey;
