--- a/packages/styles/_sass/reusable-components/_design-system-reset.scss
+++ b/packages/styles/_sass/reusable-components/_design-system-reset.scss
@@ -86,7 +86,7 @@ body {
      font-size: rem($base-font);
   }
   line-height: $l-h;
-  min-height: 100vh;
+  min-height: 100%;
 }
 
 
